tests/miniJava/neg/000326_mutation.MiniJava
class java { public static void Main ( public String [ ] java ) { { } } }
